clusters/talos-robbinsdale/apps/media/jellyseerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  namespace: media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "jellyseerr.rajsingh.info"
    - "jellyseerr.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyseerr
          port: 8989
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
